syntax = "proto3";
package fits_proto;

import "defs.proto";

message SetRegion{

    string file_id = 1;    
    sfixed32 region_id = 2;    
    RegionInfo region_info = 3;
}

message SetRegionAck{
   bool success = 1;
   string message = 2;
    sfixed32 region_id = 3;

}
